Website URL needs to be a different color to show that it's a link. Username needs to be increased in size and made more prominent. Report issue is broken on the live site.  Cannot enter text or resize the modal or click close or click away.

--- a/_sass/includes/_base.scss
+++ b/_sass/includes/_base.scss
@@ -20,6 +20,13 @@
     font-weight: bold;
     font-size: 15px;
 }
+.details h5 {
+    font-size: 22px;
+    line-height: 22px;
+}
+.website-url {
+	color: rgb(15, 175, 255);
+}
 .slick-track .menu {
     background: #fff;
     box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.2);
